log
Wed, Mar 26, 2025  8:49:19 AM: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  0|6
total_score: 0/70
25021aa
Wed, Mar 26, 2025  8:53:20 AM: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
eaab063
Wed, Mar 26, 2025  9:03:18 AM: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|5
total_score: 10/70
6ac9530
Wed, Mar 26, 2025  9:08:31 AM: 
 list.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function 'firstList':
list.c:45:1: error: control reaches end of non-void function [-Werror=return-type]
   45 | }
      | ^
cc1.exe: all warnings being treated as errors
Compilation failed
d04e140
Wed, Mar 26, 2025  9:11:08 AM: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function 'firstList':
list.c:47:1: error: control reaches end of non-void function [-Werror=return-type]
   47 | }
      | ^
cc1.exe: all warnings being treated as errors
Compilation failed
9ef6137
Wed, Mar 26, 2025  9:11:49 AM: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
b6f9fa3
Wed, Mar 26, 2025  9:12:19 AM: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
In file included from test.c:5:
list.c: In function 'firstList':
list.c:49:1: error: control reaches end of non-void function [-Werror=return-type]
   49 | }
      | ^
cc1.exe: all warnings being treated as errors
Compilation failed
170a4dd
Wed, Mar 26, 2025  9:14:04 AM: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
08a3d39
